@@ -23,7 +23,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -54,7 +53,7 @@ import org.pmiops.workbench.initialcredits.WorkspaceInitialCreditUsageService;
 import org.pmiops.workbench.institution.InstitutionService;
 import org.pmiops.workbench.leonardo.LeonardoApiClient;
 import org.pmiops.workbench.mail.MailService;
-import org.pmiops.workbench.model.ExpiredInitialCreditsEventRequest;
+import org.pmiops.workbench.model.ExhaustedInitialCreditsEventRequest;
 import org.pmiops.workbench.model.WorkspaceActiveStatus;
 import org.pmiops.workbench.test.FakeClock;
 import org.pmiops.workbench.utils.mappers.FeaturedWorkspaceMapper;
@@ -159,8 +158,9 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_alertsAndDeletesResources_whenDollarThresholdIsExceeded()
-      throws MessagingException {
+  public void
+      handleInitialCreditsExhaustionBatch_alertsAndDeletesResources_whenDollarThresholdIsExceeded()
+          throws MessagingException {
     final double limit = 100.0;
     final double costUnderThreshold = 49.5;
 
@@ -180,8 +180,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), costUnderThreshold);
 
     // check that we have not alerted before the threshold
-    ExpiredInitialCreditsEventRequest request =
-        buildExpiredInitialCreditsEventRequest(List.of(user), allBQCosts, allDbCosts);
+    ExhaustedInitialCreditsEventRequest request =
+        buildExhaustedInitialCreditsEventRequest(List.of(user), allBQCosts, allDbCosts);
     controller.handleInitialCreditsExhaustionBatch(request);
     verifyNoInteractions(mailService);
 
@@ -232,7 +232,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
 
   @Test
   public void
-      handleInitialCreditsExpiry_alertsAndDeletesResources_whenAltDollarThresholdIsExceeded()
+      handleInitialCreditsExhaustionBatch_alertsAndDeletesResources_whenAltDollarThresholdIsExceeded()
           throws MessagingException {
 
     // set alert thresholds at 30% and 65% instead
@@ -257,8 +257,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     Map<String, Double> allBQCosts = Maps.newHashMap();
     allBQCosts.put(String.valueOf(user.getUserId()), costUnderThreshold);
 
-    ExpiredInitialCreditsEventRequest request =
-        buildExpiredInitialCreditsEventRequest(List.of(user), allBQCosts, allDbCosts);
+    ExhaustedInitialCreditsEventRequest request =
+        buildExhaustedInitialCreditsEventRequest(List.of(user), allBQCosts, allDbCosts);
 
     controller.handleInitialCreditsExhaustionBatch(request);
     verifyNoInteractions(mailService);
@@ -313,7 +313,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_alertsAndDeletesResources_evenWhenUserIsDisabled()
+  public void handleInitialCreditsExhaustionBatch_alertsAndDeletesResources_evenWhenUserIsDisabled()
       throws MessagingException {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
@@ -326,8 +326,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
 
     final DbWorkspace workspace = createWorkspace(user, SINGLE_WORKSPACE_TEST_PROJECT);
 
-    ExpiredInitialCreditsEventRequest request =
-        buildExpiredInitialCreditsEventRequest(
+    ExhaustedInitialCreditsEventRequest request =
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d));
 
     controller.handleInitialCreditsExhaustionBatch(request);
@@ -337,8 +337,9 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_alertsAndDeletesResources_evenWhenWorkspaceIsDeleted()
-      throws MessagingException {
+  public void
+      handleInitialCreditsExhaustionBatch_alertsAndDeletesResources_evenWhenWorkspaceIsDeleted()
+          throws MessagingException {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
     final DbUser user = createUser(SINGLE_WORKSPACE_TEST_USER);
@@ -349,8 +350,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     Map<String, Double> allBQCosts = Maps.newHashMap();
     allBQCosts.put(String.valueOf(user.getUserId()), 100.01);
 
-    ExpiredInitialCreditsEventRequest request =
-        buildExpiredInitialCreditsEventRequest(
+    ExhaustedInitialCreditsEventRequest request =
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d));
 
     controller.handleInitialCreditsExhaustionBatch(request);
@@ -361,7 +362,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_noAlert_ifCostIsBelowLowestThreshold() {
+  public void handleInitialCreditsExhaustionBatch_noAlert_ifCostIsBelowLowestThreshold() {
     // set limit so usage is just under the 50% threshold
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
@@ -370,8 +371,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     Map<String, Double> allBQCosts = Maps.newHashMap();
     allBQCosts.put(String.valueOf(user.getUserId()), 49.99);
 
-    ExpiredInitialCreditsEventRequest request =
-        buildExpiredInitialCreditsEventRequest(
+    ExhaustedInitialCreditsEventRequest request =
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d));
 
     controller.handleInitialCreditsExhaustionBatch(request);
@@ -380,7 +381,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_doesntThrowNPE_whenWorkspaceIsMissingCreator() {
+  public void handleInitialCreditsExhaustionBatch_doesntThrowNPE_whenWorkspaceIsMissingCreator() {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
     final DbUser user = createUser(SINGLE_WORKSPACE_TEST_USER);
@@ -390,8 +391,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     // set limit so usage is just under the 50% threshold
     Map<String, Double> allBQCosts = Map.of(String.valueOf(user.getUserId()), 49.99);
 
-    ExpiredInitialCreditsEventRequest request =
-        buildExpiredInitialCreditsEventRequest(
+    ExhaustedInitialCreditsEventRequest request =
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d));
 
     controller.handleInitialCreditsExhaustionBatch(request);
@@ -400,7 +401,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_doesntaAlert_ifDollarLimitWasOverriddenToOverUse()
+  public void handleInitialCreditsExhaustionBatch_doesntAlert_ifDollarLimitWasOverriddenToOverUse()
       throws MessagingException {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
@@ -411,7 +412,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), 150.0);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
 
@@ -422,7 +423,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     assertThat(workspace.isInitialCreditsExhausted()).isEqualTo(false);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 150.0)));
 
     verifyNoMoreInteractions(mailService);
@@ -432,7 +433,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   // do not reactivate workspaces if the new dollar limit is still below the usage
 
   @Test
-  public void handleInitialCreditsExpiry_doesntaAlert_ifDollarLimitWasOverriddenToUnderUse()
+  public void handleInitialCreditsExhaustionBatch_doesntAlert_ifDollarLimitWasOverriddenToUnderUse()
       throws MessagingException {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
@@ -445,7 +446,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), 300.0);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
     assertThat(workspace.isInitialCreditsExhausted()).isEqualTo(true);
@@ -454,15 +455,16 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     assertThat(workspace.isInitialCreditsExhausted()).isEqualTo(true);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 300.0)));
     verifyNoMoreInteractions(mailService);
     assertThat(workspace.isInitialCreditsExhausted()).isEqualTo(true);
   }
 
   @Test
-  public void handleInitialCreditsExpiry_disabledAllWorkspaces_ifTheCombinedCostExceedsLimit()
-      throws MessagingException {
+  public void
+      handleInitialCreditsExhaustionBatch_disabledAllWorkspaces_ifTheCombinedCostExceedsLimit()
+          throws MessagingException {
     final String proj1 = "proj-1";
     final String proj2 = "proj-2";
     final double cost1 = 123.45;
@@ -479,7 +481,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), sum);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
 
@@ -493,7 +495,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_alertsAllUsers_ifTheyExceedFreeTierLimit()
+  public void handleInitialCreditsExhaustionBatch_alertsAllUsers_ifTheyExceedFreeTierLimit()
       throws MessagingException {
     final String proj1 = "proj-1";
     final String proj2 = "proj-2";
@@ -512,7 +514,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user2.getUserId()), cost2);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user1, user2),
             allBQCosts,
             Map.of(String.valueOf(user1.getUserId()), 0d, String.valueOf(user2.getUserId()), 0d)));
@@ -527,8 +529,9 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_alertsOnlyOnce_ifCostKeepIncreasingAboveThreshold()
-      throws MessagingException {
+  public void
+      handleInitialCreditsExhaustionBatch_alertsOnlyOnce_ifCostKeepIncreasingAboveThreshold()
+          throws MessagingException {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
     final DbUser user = createUser(SINGLE_WORKSPACE_TEST_USER);
@@ -538,7 +541,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), 100.01);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
     assertThat(workspace.isInitialCreditsExhausted()).isEqualTo(true);
@@ -550,7 +553,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
 
     // we do not alert again
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 100.01)));
     verify(mailService, times(1)).alertUserInitialCreditsExhausted(eq(user));
 
@@ -561,7 +564,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
 
   // Regression test coverage for RW-8328.
   @Test
-  public void handleInitialCreditsExpiry_singleAlert_forExhaustedAndByoBilling() throws Exception {
+  public void handleInitialCreditsExhaustionBatch_singleAlert_forExhaustedAndByoBilling()
+      throws Exception {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
     final DbUser user = createUser(SINGLE_WORKSPACE_TEST_USER);
@@ -571,7 +575,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), 100.01);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
 
@@ -579,14 +583,14 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     workspaceDao.save(workspace.setBillingAccountName(fullBillingAccountName("byo-account")));
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 100.01)));
     verifyNoMoreInteractions(mailService);
   }
 
   @Test
   public void
-      handleInitialCreditsExpiry_disableFreeTierWorkspacesOnly_whenUserHasMultipleWorkspaces()
+      handleInitialCreditsExhaustionBatch_disableFreeTierWorkspacesOnly_whenUserHasMultipleWorkspaces()
           throws MessagingException {
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 100.0;
 
@@ -603,7 +607,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
 
     Map<String, Double> allBQCosts = Map.of(String.valueOf(user.getUserId()), 100.01);
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
 
@@ -616,7 +620,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
 
   @Test
   public void
-      handleInitialCreditsExpiry_deletedWorkspaceUsageIsConsidered_whenChargeIsPostedAfterCron()
+      handleInitialCreditsExhaustionBatch_deletedWorkspaceUsageIsConsidered_whenChargeIsPostedAfterCron()
           throws MessagingException {
     final DbUser user = createUser(SINGLE_WORKSPACE_TEST_USER);
     DbWorkspace workspace = createWorkspace(user, SINGLE_WORKSPACE_TEST_PROJECT);
@@ -629,21 +633,21 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     workspaceDao.save(workspace);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verifyNoInteractions(mailService);
 
     allBQCosts = Map.of(String.valueOf(user.getUserId()), 100.1);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 50.0)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
   }
 
   @Test
   public void
-      handleInitialCreditsExpiry_deletedWorkspaceUsageIsConsidered_whenAnotherWorkspaceExceedsLimitAfterCron()
+      handleInitialCreditsExhaustionBatch_deletedWorkspaceUsageIsConsidered_whenAnotherWorkspaceExceedsLimitAfterCron()
           throws MessagingException {
     final DbUser user = createUser(SINGLE_WORKSPACE_TEST_USER);
     DbWorkspace workspace = createWorkspace(user, SINGLE_WORKSPACE_TEST_PROJECT);
@@ -657,7 +661,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     workspaceDao.save(workspace);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 0d)));
     verifyNoInteractions(mailService);
 
@@ -667,7 +671,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     allBQCosts.put(String.valueOf(user.getUserId()), 100.1);
 
     controller.handleInitialCreditsExhaustionBatch(
-        buildExpiredInitialCreditsEventRequest(
+        buildExhaustedInitialCreditsEventRequest(
             List.of(user), allBQCosts, Map.of(String.valueOf(user.getUserId()), 50.0)));
     verify(mailService).alertUserInitialCreditsExhausted(eq(user));
 
@@ -676,7 +680,8 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @Test
-  public void handleInitialCreditsExpiry_withMissingUsersInRequest_NoNPE() throws Exception {
+  public void handleInitialCreditsExhaustionBatch_withMissingUsersInRequest_NoNPE()
+      throws Exception {
 
     workbenchConfig.billing.defaultFreeCreditsDollarLimit = 300.0;
 
@@ -688,7 +693,7 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
     createWorkspace(user2, SINGLE_WORKSPACE_TEST_PROJECT);
     createWorkspace(user3, SINGLE_WORKSPACE_TEST_PROJECT);
 
-    ExpiredInitialCreditsEventRequest request = new ExpiredInitialCreditsEventRequest();
+    ExhaustedInitialCreditsEventRequest request = new ExhaustedInitialCreditsEventRequest();
     request.setUsers(Arrays.asList(user1.getUserId(), user2.getUserId()));
 
     Map<String, Double> liveCostByCreator = new HashMap<>();
@@ -732,12 +737,11 @@ class CloudTaskInitialCreditsExhaustionControllerTest {
   }
 
   @NotNull
-  private static ExpiredInitialCreditsEventRequest buildExpiredInitialCreditsEventRequest(
+  private static ExhaustedInitialCreditsEventRequest buildExhaustedInitialCreditsEventRequest(
       List<DbUser> users, Map<String, Double> allBQCosts, Map<String, Double> dbCostByCreator) {
-    ExpiredInitialCreditsEventRequest request = new ExpiredInitialCreditsEventRequest();
-    request.setUsers(users.stream().map(DbUser::getUserId).collect(Collectors.toList()));
-    request.setLiveCostByCreator(allBQCosts);
-    request.setDbCostByCreator(dbCostByCreator);
-    return request;
+    return new ExhaustedInitialCreditsEventRequest()
+        .users(users.stream().map(DbUser::getUserId).toList())
+        .liveCostByCreator(allBQCosts)
+        .dbCostByCreator(dbCostByCreator);
   }
 }
